# rct3-ui-scale

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
config/: d3d9_uiscale.ini
research/: ghidra_notes.md  renderdoc_findings.md  ui_pass_findings.md
src/: README.md  borderless.cpp  borderless.h  config.cpp  config.h  d3d9.def  d3d9_hooks.cpp  d3d9_hooks.h  d3d9_proxy_exports.cpp  dllmain.cpp  frame_inspect.cpp  frame_inspect.h  input_remap.cpp  input_remap.h  logging.cpp  logging.h  proxy.cpp  proxy.h  proxy_exports.cpp  selector.cpp  selector.h  sigscan.cpp  sigscan.h  source_patch.cpp  source_patch.h  ui_scale.cpp  ui_scale.h
src/apply/: disable.cpp  disable.h
src/cache/: strategy_cache.cpp  strategy_cache.h
src/core/: canvas_probe.cpp  canvas_probe.h  config.cpp  config.h  log.cpp  log.h  patch.cpp  patch.h  scale.cpp  scale.h  state.cpp  state.h
src/device/: backbuffer_gate.cpp  backbuffer_gate.h
src/discovery/: passive_discovery.cpp  passive_discovery.h
src/hooks/: superwide_fix.cpp  superwide_fix.h  timing_hook.cpp  timing_hook.h
src/sig/: sigscan.cpp  sigscan.h
src/window/: borderless.cpp  borderless.h
tools/ghidra/: DataRefs.java  DecompAt.java  FindBytes.java  FindFloat.java  FindFvf.java  FindOffsetReads.java  UiAnalyze.java  UiAnalyze.py  XrefTo.java
